<resources>
    <string name="app_name">CognitiveFaceNoSdk</string>
    <string name="select_image">"Select Picture"</string>
    <string name="browse">Browse</string>
    <string name="camera">Take photo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="camera_access">You need to allow access to the camera</string>
    <string name="camera_denied">Use of camera denied</string>
    <string name="image_too_small">Photo must be at least 1Kb in size</string>
    <string name="enroll">Enroll</string>
    <string name="person_name">Name</string>
    <string name="add_person">Add person</string>
    <string name="face_api_failure">Face API call failed</string>
</resources>
